# mood-journal-ml

./: .dockerignore  .env.test  .gitignore  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
LICENSES/: lemotif.txt
apps/api/: main.py
apps/web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  main.tsx
apps/web/src/api/: client.ts  predict.ts
apps/web/src/constants/: chartConstants.ts  emotionMaps.ts  maxBuckets.ts
apps/web/src/hooks/: useEmotionModel.ts  useInferenceQueue.ts  useInsightStats.ts  useJournalEntries.ts  useTheme.ts
apps/web/src/pages/: ErrorBoundary.tsx  HistoryPage.tsx  HistorySkeleton.tsx  Home.tsx  HomeSkeleton.tsx  (+8 more)
data/: test.csv  train.csv  train_preprocessed.csv  validation.csv
docker/: Dockerfile
ml/: config.py  config.yaml  data.py  evaluate.py  inference.py  onnx.py  trainer.py  validate.py
ml/calibration/: baselines.py  temperature.py  thresholds.py
ml/configs/: distilbert.yaml  minilm.yaml  tinybert.yaml
ml/configs/models/: distilbert.yaml  minilm.yaml  tinybert.yaml
ml/datasets/: lemotif-data-augmented.csv  synthetic-neutral.json
ml/evaluation/: evaluate.py  test.py
ml/export/: onnx.py
ml/inference/: classifier.py  emotion_classifier.py  infer.py  inference.py  predict.py
ml/training/: train.py  trainer.py
ml/utils/: calibration.py  config.py  data.py  metrics.py
notebooks/: 01_dataset_exploration.ipynb  02_data_preprocessing.ipynb  02_model_comparison_emotion.ipynb  03_data_augmentation.ipynb  03_hyperparameter_optimization.ipynb  04_final_model_evaluation.ipynb  exploration.ipynb
tests/: conftest.py  test_api.py  test_ml.py
(+37 files in other folders)
