[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mood-tracker-ml"
version = "1.0.0"
description = "Emotion classification for a mood tracking web app"
requires-python = ">=3.10"
dependencies = ["pydantic==2.12.5", "PyYAML==6.0.3", "python-dotenv==1.2.1"]

[project.optional-dependencies]
api = ["fastapi==0.128.0", "uvicorn==0.40.0"]
ml = [
    "datasets==5.0.0",
    "nltk==3.9.4",
    "numpy==2.4.0",
    "onnx==1.22.0",
    "onnxsim-prebuilt==0.4.36.post1",
    "optimum==2.2.0",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "setfit==1.1.3",
    "torch==2.12.1",
    "transformers>=4.57.3",
]
dev = ["pytest==9.0.2"]

[tool.setuptools]
packages = ["apps", "ml"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
